--- a/P002926.opf/meta.yml
+++ b/P002926.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P002926
+id: P002926
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1CZ1011
   title: དྲང་ངེས་ལེགས་བཤད་སྙིང་པོ
-  volume: ''
   author: ''
+  volumes: {}
