--- a/P002926.opf/layers/v001/Pagination.yml
+++ b/P002926.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 99f4dc04a8bb443f9c826f3c61ef27da
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   de0df680e5f4482e8484c3e4ee17c551:
