--- a/P002926.opf/meta.yml
+++ b/P002926.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P002926
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:28:50.992847
 source_metadata:
   id: bdr:W1CZ1011
   title: དྲང་ངེས་ལེགས་བཤད་སྙིང་པོ
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 132
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
